--- a/sass/gutenberg/blocks/_core-gallery.scss
+++ b/sass/gutenberg/blocks/_core-gallery.scss
@@ -11,10 +11,6 @@
       line-height: 1.55;
       margin-bottom: var(--margin-between-text-elements);
       width: 100%;
-
-      @media (max-width: 600px) {
-        padding: 0;
-      }
     }
 
     img {
